Added pictures, rationale for size and re-ordered suppliers considered

--- a/docs/blog/posts/2024-12-29-mattress.md
+++ b/docs/blog/posts/2024-12-29-mattress.md
@@ -18,7 +18,7 @@ We have decided on full latex, King size (180cm x 190cm), and at least 8" (20cm)
 
     **Size**
 
-    A king allows for expandability in the future, whereas a queen would necessitate changing in the future.
+    A king allows for expandability in the future, whereas a queen would necessitate changing in the future. During our furniture shopping, we learnt that there was a difference between SG and Asian Mattress sizes. We started with SG King (183x190cm). However, after realizing that there were limited customized mattresses (Lien'A) and bedframe (e.g. Ikea) available in SG size, we decided to pivot to Asian King (180x200cm). Furthermore, the Asian King is closer to international standards e.g. European (180x200), Austalian (183x203),American (193x203).
 
     **Thickness**
 
@@ -34,6 +34,7 @@ After considering many store mattresses, we could not find one which met all our
     - [10" MyLatex Austin] 6/10 firm (Shopee) $1439
     - [10" MyLatex Alice] 7/10 firm (Shopee) $1339
     - [10" MyLatex Vienna] 6/10 firm (Shopee) $1499
+    - [9" Dormiente Natural Deluxe] $XXXX - Learnt alot from the salesperson
     - [8" Bluvale Green Atlas] (Bluvale) $2255
     - [8" MyLatex Formula] 7.5/10 firm $1499@Megafurniture (alt: [$1199@Plus65][8" MyLatex Formula Plus65])
     - [8" Mylatex Full Natural Latex Premium] $2799@Megafurniture
@@ -53,37 +54,57 @@ We looked for latex mattress layers, keeping in mind the following certification
 
 We then considered many suppliers, from Shopee, Lazada, Amazon, Aliexpress and so on, before settling on Taobao, as the suppliers on Taobao (especially [Lien'A]) offered mattresses in specific densities (e.g. 95D, 110D), while those elsewhere did not have these specifications.
 
-??? note "Suppliers considered"
+??? info "Suppliers considered"
 
     We considered these suppliers for latex mattress layers:
 
-    - [1-4" Firm] (Lazada) $132-407
-    - [2" Super Soft 14 ILD] (Amazon) $325
-    - [2" Soft] (Amazon) $400
-    - [2" Unknown] (Shopee, has physical store) $329
-    - [2" Soft/Medium/Firm] ~$430
-    - [2" Medium Firm] (Shopee) $100
-    - [2" Medium] (Amazon) $477
-    - [3" Firm 95D] (Shopee) $272
-    - [3" Firm] (Amazon) $810
-    - [4" Medium Firm] (Shopee) $378
-    - [4" Unknown] $400
+    - [Lien'A] - GOLS/ECOTEX (Vietnam)
+    - [Theptax] - GOLS/ECOTEX (Thailand)
+    - [Sleep on Latex] - GOLS/ECOTEX: [3" Firm] (Amazon) $810
+    - [Turmerry] - GOLS/ECOTEX: [2" Soft/Medium/Firm] (Amazon) ~$430
+    - [Vytex]: [2" Super Soft 14 ILD] (Amazon) $325
+    - Lazada:
+        - [1-4" Firm] $132-407
+        - [1-4" Firm] (Lazada) $132-407
+    - Shopee:
+        - [2" Unknown] (Shopee, has physical store) $329
+        - [2" Medium Firm] (Shopee) $100
+        - [3" Firm 95D] (Shopee) $272
+        - [4" Medium Firm] (Shopee) $378
+    - Aliexpress: [4" Unknown] $400
     - [Aerofoam] (supplier)
+
 
 Layer breakdown (from top to bottom):
 
--   Comfort layer: [3" Soft, Shopee, $250]. This was our first buy, and while the site claimed it was medium-firm, we felt it was more toward soft, probably 85D?
--   Middle layer: TBD
--   Support layer: TBD
+1.   Comfort layer: [3" Soft, $250 (Shopee)].
 
+<figure style="max-width:300px">
+  <img src="/static/blog/2024-12-29/shopee_soft.jpg" alt="Shopee" loading="lazy"/>
+  <figcaption>3" Soft, $250 (Shopee)<figcaption/>
+</figure>
+
+This was our first buy, and while the site claimed it was medium-firm, we felt it was more toward soft, probably 85D?
+
+2.   Middle layer: TBD
+
+3.   Support layer: 3" 110D, $540 (Lien'A via Taobao)
+
+<figure style="max-width:300px">
+  <img src="/static/blog/2024-12-29/lienA_110D.jpg" alt="Lien'A" loading="lazy"/>
+  <figcaption>3" 110D, $540 (Lien'A via Taobao)<figcaption/>
+</figure>
+
+It took around 3 weeks from purchase to delivery. The time includes customizing it to fit 180x190cm. The quality was really good and it also came with a free latex pillow and a zippered covered. It was also at this point that we realised it was also GOLS certified.
 
 [DIY our own]: https://reddit.com/r/MattressMod/comments/1ccvych/an_updated_guide_to_mattress_diy/
 [Lien'A]: https://www.liena.vn/
-[3" Soft, Shopee, $250]: https://shopee.sg/%E3%80%90SG-STOCK%E3%80%91Q-OU-Mattress-Latex-Mattress-Thailand-Natural-All-in-one-7.5cm-Single-Mattres-i.1321170560.29408866607
+[3" Soft, $250 (Shopee)]: https://shopee.sg/%E3%80%90SG-STOCK%E3%80%91Q-OU-Mattress-Latex-Mattress-Thailand-Natural-All-in-one-7.5cm-Single-Mattres-i.1321170560.29408866607
 [10" Sofzsleep Trilogy]: https://sofzsleep.net/product/trilogy/
 [10" MyLatex Austin]: https://shopee.sg/MyLatex-AUSTIN-(10-inch)-100-Natural-Latex-Orthopaedic-Mattress-Sizes-(King-Queen-Super-Single-Single)-i.541933345.12047660084
 [10" MyLatex Alice]: https://shopee.sg/MyLatex-ALICE-(10-inch)-100-Natural-Latex-Orthopaedic-Mattress-Sizes-(King-Queen-Super-Single-Single)-i.541933345.12747611371?sp_atk=9e062214-17fc-4a73-a83c-32bde8761701&xptdk=9e062214-17fc-4a73-a83c-32bde8761701
 [10" MyLatex Vienna]: https://kita.sg/collections/mylatex/products/mylatex-vienna
+[9" Dormiente Natural Deluxe]: https://www.dormiente.sg/natural-latex-mattress-natural-deluxe/
 [8" Bluvale Green Atlas]: https://www.bluvale.com/products/mattress-singapore/latex/green-atlas.html
 [8" MyLatex Formula]: https://megafurniture.sg/collections/mylatex/products/mylatex-formula-latex-mattress?variant=17016720457843
 [8" MyLatex Formula Plus65]: https://www.plus65furniture.sg/products/mylatex-formula-latex-mattress?variant=41307098087620
@@ -107,3 +128,8 @@ Layer breakdown (from top to bottom):
 [4" Medium Firm]: https://shopee.sg/K-HOME-Thai-Latex-Mattress-Royal-Thai-Hotel-Pocket-Spring-Latex-Memory-Foam-Mattress-i.1118171164.28857126874
 [4" Unknown]: https://www.aliexpress.com/item/1005006303584992.html
 [Aerofoam]: https://www.myaerofoam.com/showproducts/productid/4819111/cid/507465/7zone-standard/
+[Lien'A]: https://www.liena.vn/
+[Theptax]: https://theptex.com/
+[Sleep on Latex]: https://sleeponlatex.com
+[Turmerry]: https://www.turmerry.com/
+[Vytex]: https://vytex.com
