added picture and rationale for sofa selection

--- a/docs/blog/posts/2025-01-12-sofa.md
+++ b/docs/blog/posts/2025-01-12-sofa.md
@@ -15,6 +15,7 @@ After the mattress, we decided to get a sofa.
 -   Dimension: W: 140cm, D: 80cm, WS: 80cm
 -   Material: Leather
 -   Budget: < SGD1.5k
+-   Funtionality: A full recliner with electric operation is preferred to allow for the full range of recline
 
 ## Options
 
@@ -44,13 +45,26 @@ After the mattress, we decided to get a sofa.
 
 7.  [TWIN-MOTOR 2S-SOFA UM01 DGY][twin-motor-sofa] (Nittori), $1299
 
-    - This was the first sofa we saw at Nitori (earlier, we thought they did not have any). Nicholas felt it was not very comfortable on initial seating, despite having 2 adjustable parts: headrest and tilt.
+    -   This was the first sofa we saw at Nitori (earlier, we thought they did not have any). Nicholas felt it was not very comfortable on initial seating, despite having 2 adjustable parts: headrest and tilt.
 
 8.  [2 SEAT RECLINER SOFA N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] (Nittori), $1199
 
-    - This was the second sofa we saw at Nitori. It was an electric recliner sofa. It was very comfortable on initial seating, and also on full tilt.
+    -   This was the second sofa we saw at Nitori. It was an electric recliner sofa. It was very comfortable on initial seating, and also on full tilt.
 
-We selected the Nitori 2-seater [N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] sofa.
+![](../../static/blog/2025-01-12/nitori_nbelieva.jpg)
+
+We purchased the Nitori 2-seater [N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] sofa on 11 January 2025.
+
+Considerations:
+1. **Comfort**: Chanel found the UM01 more comfortable as it suits her short legs and felt that the ability to adjust the headrest was a big winner. However, Nicholas convinced Chanel that putting a pillow at the back would resolve the comfort.
+2. **Durability**: Between the N-shield PVC and the leather, the salesman recommended leather as it will last longer. Hence, we topped up $100 for leather. Thick leather was abit too sticky for our liking and the additional $400 for it was not worth it.
+3. **Appearance**: Chanel found the UM01 better looking as there was less lines/sections. However, Nicholas convinced Chanel that it was because of the display piece colours and the lighting at the pieces(Nbelieva-brown, UM01-ivory) which made the lighter/UM01 colour pieces look better. Chanel concurred and decided to get beige for Nbelieva then since they did not have black and the brown (display piece) is a ugly brown (see picture above).
+4. **Time to deliver**:
+    - N-believa Leather Beige - 25 Jan (Delayed)
+    - N-believa Thick Leather Brown - Early Feb
+    - N-believa Nshield Black - Early Feb
+    - N-believa Leather Brown - 4 March
+    - UM01 Dark Grey - 11 March
 
 [bean-bag]: https://www.hipvan.com/products/bowen-bean-bag-sofa
 [leather-latex]: https://e.tb.cn/h.T7viWG1onqvLL8w?tk=wAJcebjcEKe
