fixed dates and formatting

--- a/docs/blog/posts/2024-12-29-mattress.md
+++ b/docs/blog/posts/2024-12-29-mattress.md
@@ -74,10 +74,9 @@ We then considered many suppliers, from Shopee, Lazada, Amazon, Aliexpress and s
     - Aliexpress: [4" Unknown] $400
     - [Aerofoam] (supplier)
 
+## Layer breakdown (from top to bottom):
 
-Layer breakdown (from top to bottom):
-
-1.   Comfort layer: [3" Soft, $250 (Shopee)].
+### Comfort layer: [3" Soft, $250 (Shopee)].
 
 <figure style="max-width:300px">
   <img src="/static/blog/2024-12-29/shopee_soft.jpg" alt="Shopee" loading="lazy"/>
@@ -86,11 +85,11 @@ Layer breakdown (from top to bottom):
 
 This was our first buy, and while the site claimed it was medium-firm, we felt it was more toward soft, probably 85D?
 
-2.   Middle layer: TBD
+### Middle layer: TBD
 
-3.   Support layer: 3" 110D, $540 (Lien'A via Taobao)
+### Support layer: 3" 110D, $540 (Lien'A via Taobao)
 
-<figure style="max-width:300px">
+<figure style="max-height:300px">
   <img src="/static/blog/2024-12-29/lienA_110D.jpg" alt="Lien'A" loading="lazy"/>
   <figcaption>3" 110D, $540 (Lien'A via Taobao)<figcaption/>
 </figure>
