--- a/docs/blog/posts/2024-12-29-mattress.md
+++ b/docs/blog/posts/2024-12-29-mattress.md
@@ -89,7 +89,7 @@ This was our first buy, and while the site claimed it was medium-firm, we felt i
 
 ### Support layer: 3" 110D, $540 (Lien'A via Taobao)
 
-<figure style="max-height:300px">
+<figure style="max-width:300px">
   <img src="/static/blog/2024-12-29/lienA_110D.jpg" alt="Lien'A" loading="lazy"/>
   <figcaption>3" 110D, $540 (Lien'A via Taobao)<figcaption/>
 </figure>
