--- a/docs/blog/posts/2024-12-29-mattress.md
+++ b/docs/blog/posts/2024-12-29-mattress.md
@@ -105,9 +105,7 @@ This was our first buy, and while the site claimed it was medium-firm, we felt i
 
 ### Middle layer: 3" 85D, $454 (Lien'A via Taobao)
 
-TBD
-
-The dimensions of this layer was 180x200cm.
+The dimensions of this layer was 180x200cm. It was perhaps as soft, or maybe slightly firmer, than the comfort layer.
 
 ### Support layer: 3" 110D, $540 (Lien'A via Taobao)
 
@@ -145,6 +143,29 @@ Our requirements for the mattress cover was:
     -   [Bellami Bamboo Fitted Mattress Pad] (Metro) $51
 
 After being impressed with the quality of the 3" cover provided by Lien'A for our mattress layer, we decided to order a custom cover from them for our full 9" mattress.
+
+## Assembly
+
+<figure style="max-width:800px">
+  <img src="/static/blog/2024-12-29/assembly.jpeg" alt="Assembly" loading="lazy"/>
+  <figcaption>During assembly<figcaption/>
+</figure>
+
+<figure style="max-width:800px">
+  <img src="/static/blog/2024-12-29/completed.jpeg" alt="Completed" loading="lazy"/>
+  <figcaption>Completed<figcaption/>
+</figure>
+
+## Total Cost
+
+Prices include shipping
+
+- Comfort layer: $250
+- Middle layer: $454
+- Bottom layer: $540
+- Latex blocks and custom cover: $91
+
+Total cost: $1335
 
 [Sureguard GREENGUARD Gold certified Mattress Protector]: https://www.amazon.sg/King-Deep-SureGuard-Mattress-Encasement/dp/B00WI0CPOO?dib=eyJ2IjoiMSJ9.zRXQ8bUQCiMnGue0JHPu_0Zrd1TYPm7SZi0AguCNYmSuzHFubNvqHMk21lLwFyqKP4UX_xe48KdZGeVb2pwH2TY3B2Sf47-IcULKpkwQtG6wqfrWZv6MPEvJYzVIuDW5dfmA_9IJBm0T0V-PmJh9VXFiUMRzSFEN3GLNodY-JtHtxWjzcEFXnv_VxQFD9ZKs-cH8NL7LVCUtkRSpu6s6myAVrRjfWq28uxGzUAQ7LKo.MNNJ1BBIGU2jkJ-7BgcN1GamSZdm6Ci32k2hFHuYtxc&dib_tag=se&qid=1736794840&refinements=p_4%3ASureGuard+Mattress+Protectors&s=home&sr=1-14
 [Bamboo Mattress Protector with Zipper]: https://www.amazon.com/Bamboo-Mattress-Protector-Zipper-Waterproof/dp/B09DRB2B82?crid=1820LITQV6SSZ&sprefix=mattress%2Bcover%2Bzi%2Caps%2C322&sr=8-6&th=1
