add sofa pictures

--- a/docs/blog/posts/2025-01-12-sofa.md
+++ b/docs/blog/posts/2025-01-12-sofa.md
@@ -66,6 +66,8 @@ Considerations:
     - N-believa Leather Brown - 4 March
     - UM01 Dark Grey - 11 March
 
+![](../../static/blog/2025-01-12/sofa.jpeg)
+
 [bean-bag]: https://www.hipvan.com/products/bowen-bean-bag-sofa
 [leather-latex]: https://e.tb.cn/h.T7viWG1onqvLL8w?tk=wAJcebjcEKe
 [nitori-sofa]: https://www.nitori.com.sg/collections/2seater-sofas/products/2s-sofa-mk02-hd-kd-n-shield-bk
