--- a/docs/blog/posts/2024-10-13-factorio.md
+++ b/docs/blog/posts/2024-10-13-factorio.md
@@ -8,7 +8,214 @@ categories:
 
 Factorio is a fun factory building game, and here are some things we've discovered.
 
+In this post, we consolidate the planets we've completed, and our approaches/checklist for each.
+
 <!-- more -->
+
+## Aquila (TBD)
+
+## Gleba (TBD)
+
+## Vulcanus
+
+??? note "Vulcanus Checklist"
+
+    -   [x] Vulcanus:
+        -   [x] Cliff explosives to clear all the cliffs around lava for base rebuild
+        -   [x] Mine tungsten carbide to make more foundries
+        -   [x] Stone production
+        -   [x] Blue circuits
+        -   [x] Launch rocket with 1000 metallurgic science packs (for cliff explosives)
+
+We designed this planet's production similarly to a frontend/backend system, with API requirements functioning as a common interface between the two.
+
+### Frontend
+
+Organization:
+
+Products are organized by priority:
+
+-   **Left Side**: Lower quantity items (assemblers, electric poles, foundries)
+-   **Right Side**: Scalable production items (circuits)
+
+#### Intermediate Products (we are not interested in)
+
+**Foundry Products:**
+
+-   [x] Copper Coil
+-   [x] Iron Gear
+-   [x] Iron Stick
+-   [x] Low Density Structure
+-   [x] Concrete
+
+**Assembler Products:**
+
+-   [x] (mainline) Green Circuits
+-   [x] (mainline) Red Circuits
+-   [x] (mainline) Blue Circuits
+-   [x] Tungsten Carbide
+
+#### Final Products
+
+**Foundry Output:**
+
+-   [x] Pipes
+-   [x] Turbo Splitter
+-   [x] Turbo Transport belt
+-   [x] Turbo Underground belt
+-   [x] Foundry
+-   [x] Big Mining Drills
+-   [x] Metallurgic Science Pack
+
+**Assembler:**
+
+-   [x] Military: Gun Turrets, Bullets
+-   [x] Power: Substation/Big Electric Poles
+-   [x] Logistics: Construction Bot/Logistics Bot/Roboport/ Explosives
+-   [x] Inserters: Bulk/Long
+-   [x] Beacon and Productivity/Speed/Quality Modules
+-   [x] Rocket Part and Rocket Fuel
+
+### Backend
+
+_Target: 1 turbo belt saturated with 1 line of each item (60/s)_
+
+**Mining:**
+
+-   Coal
+-   Calcite
+-   Tungsten
+
+**Foundry Operations:**
+
+-   Liquid Iron
+-   Liquid Copper
+-   Stone → Rails
+-   Iron Plates
+-   Steel Plates
+-   Tungsten Plate
+
+**Processing:**
+
+-   Stone bricks (Furnace)
+-   Chemical Products (Refinery/Chemical Factory):
+    -   Lubricant
+    -   Water
+    -   Sulfuric acid
+    -   Plastic
+
+### API Requirements (Frontend)
+
+**Notes:**
+
+-   Coal is not necessary since we're not making military science packs.
+-   Tungsten plates are only used in metallurgic science packs and turbo logistics so no need to be on the mainline.
+
+**In order of priority:**
+
+Liquids (TBD rates):
+
+-   [x] ~~Liquid Iron~~
+-   [x] ~~Liquid Copper~~
+-   [x] ~~Water~~
+-   [x] ~~Lubricant~~
+
+Solids (60/s each):
+
+-   [x] ~~Iron Plate~~
+-   [x] ~~Copper Plate~~
+-   [x] ~~Steel Plate~~
+-   [x] ~~Plastic~~
+-   [x] ~~Tungsten Carbide~~
+-   [x] ~~Stone bricks~~
+-   [x] ~~Rail~~
+
+## Nauvis
+
+??? note "Nauvis Checklist"
+
+    -   [ ] ~~Nauvis: Redo entire assembly line~~ (unnecessary)
+    -   [x] Train System
+    -   [x] Resource Production:
+        -   [x] Oil mining
+        -   [x] Uranium mining
+        -   [x] New Copper Source
+        -   [x] New Stone Source
+        -   [x] More iron and oil sources
+        -   [x] More oil refineries (for lubricant)
+    -   [x] Power:
+        -   [x] Address Coal Shortage
+        -   [x] Nuclear Power
+        -   [x] Kovarex enrichment
+    -   [x] Science Production:
+        -   [x] Purple Science Pack
+        -   [x] Yellow Science Pack
+        -   [x] Space science pack (from asteroids)
+        -   [x] Optimized Space Science Pack production
+    -   [x] Base Upgrades:
+        -   [x] Convert furnaces to electric (monitor power usage)
+        -   [x] Blue belts
+        -   [x] Assembling machine 3 production
+    -   [x] Space Program:
+        -   [x] Rocket fuel production
+        -   [x] Rocket part production
+        -   [x] Space platform production
+        -   [x] Launch Rocket
+        -   [x] Spaceship
+    -   [x] Logistics:
+        -   [x] Requestor boxes
+        -   [x] Temporary requestor box for nuclear fuel (pre-kovarex)
+    -   [x] Military:
+        -   [ ] Nukes
+
+We initially planned to refactor the assembly line here, but seeing that Vulcanus was able to supply much more than Nauvis, we decided to keep the assembly line as is.
+
+For reference in the future, the initial plan is as follows:
+
+### Refactoring Plan
+
+Input lines and intermediate product assembler lines must be expandable on demand.
+
+#### Outputs
+
+-   Science Packs
+-   Random items to passive provider chests
+
+#### Inputs
+
+Solids (on mainline):
+
+-   Iron plates
+-   Copper plates
+-   Steel
+
+Less important solids (feed directly to assemblers needing it):
+
+-   Plastic (red circuit, low density structure)
+-   Battery (flying machine frame, lasergun)
+-   Sulfur (blue science pack, explosives)
+-   Iron ore (concrete)
+-   Coal (grenade, explosives)
+-   Stone (rail)
+-   Bricks
+-   U238 (uranium ammo)
+
+Liquid Inputs to supply (build the rest on the spot):
+
+-   Lubricant (flying machine frame, express belts)
+-   Sulfuric acid (processing unit)
+-   Light oil (rocket fuel)
+
+### Assembly
+
+Prioritize intermediate products (these must be expandable):
+
+-   Low density structure
+-   Engine unit
+-   Flying machine frame
+-   Green/Red/Blue circuits
+
+## References
 
 -   [Guide to Belt Balancers]
 
