--- a/docs/blog/posts/2024-10-13-factorio.md
+++ b/docs/blog/posts/2024-10-13-factorio.md
@@ -219,4 +219,4 @@ Prioritize intermediate products (these must be expandable):
 
 -   [Guide to Belt Balancers]
 
-[Guide to Belt Balancers]: <../../static/blog/2024-10-13/Factorio Belt Balancers v1.0.pdf>
+[Guide to Belt Balancers]: ../../static/blog/2024-10-13/Factorio-Belt-Balancers-v1.0.pdf
