fix: scandinavian rubber bed dead link

--- a/docs/blog/posts/2025-01-23-bedframe.md
+++ b/docs/blog/posts/2025-01-23-bedframe.md
@@ -71,6 +71,6 @@ However, LUNA does not have a bottom panel, and we went with [Scandinavian Rubbe
 [Scandinavian Oak Wood Storage Bed SOLACE]: https://lofthome.com/collections/bed-frames/products/scandinavian-oak-wood-storage-bed-solace
 [Minimalist Oak Wood Microfiber Leather Storage Bed LUNA]: https://lofthome.com/collections/wooden-bed-frames/products/minimalist-oak-wood-microfiber-leather-storage-bed-luna?variant=41596120596593
 [Scandinavian Oak Wood Bed APERTURE]: https://lofthome.com/collections/asia-king-bed-frames/products/scandinavian-wood-platform-bed-aperture?variant=41271544807537
-[Scandinavian Rubber Wood Storage Bed BASE]: https://lofthome.com/collections/storage-bed-frames/products/scandinavian-rubber-wood-storage-bed-base
+[Scandinavian Rubber Wood Storage Bed BASE]: https://web.archive.org/web/20250520203508/https:/lofthome.com/collections/storage-bed-frames/products/scandinavian-rubber-wood-storage-bed-base
 [Scandinavian Oak Wood Storage Bed SHELTER]: https://lofthome.com/products/scandinavian-oak-wood-storage-bed-shelter?variant=41561474957425
 [Scandinavian Oak Wood Storage Bed CACHE]: https://lofthome.com/collections/wooden-bed-frames/products/scandinavian-oak-wood-storage-bed-cache?variant=41593676562545
