--- a/docs/blog/posts/2025-01-12-sofa.md
+++ b/docs/blog/posts/2025-01-12-sofa.md
@@ -56,6 +56,7 @@ After the mattress, we decided to get a sofa.
 We purchased the Nitori 2-seater [N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] sofa on 11 January 2025.
 
 Considerations:
+
 1. **Comfort**: Chanel found the UM01 more comfortable as it suits her short legs and felt that the ability to adjust the headrest was a big winner. However, Nicholas convinced Chanel that putting a pillow at the back would resolve the comfort.
 2. **Durability**: Between the N-shield PVC and the leather, the salesman recommended leather as it will last longer. Hence, we topped up $100 for leather. Thick leather was abit too sticky for our liking and the additional $400 for it was not worth it.
 3. **Appearance**: Chanel found the UM01 better looking as there was less lines/sections. However, Nicholas convinced Chanel that it was because of the display piece colours and the lighting at the pieces(Nbelieva-brown, UM01-ivory) which made the lighter/UM01 colour pieces look better. Chanel concurred and decided to get beige for Nbelieva then since they did not have black and the brown (display piece) is a ugly brown (see picture above).
@@ -68,7 +69,7 @@ Considerations:
 
 ![](../../static/blog/2025-01-12/sofa.jpeg)
 
-[bean-bag]: https://www.hipvan.com/products/bowen-bean-bag-sofa
+[bean-bag]: https://web.archive.org/web/20250824005259/https://www.hipvan.com/products/bowen-bean-bag-sofa
 [leather-latex]: https://e.tb.cn/h.T7viWG1onqvLL8w?tk=wAJcebjcEKe
 [nitori-sofa]: https://www.nitori.com.sg/collections/2seater-sofas/products/2s-sofa-mk02-hd-kd-n-shield-bk
 [univonna-javier]: https://www.lazada.sg/products/univona-javier-2-seater-recliner-sofa-synthetic-leather-free-delivery-free-assembly-i6366730-s21045137676.html?
