fix(docs): update sofa options and remove broken links

--- a/docs/blog/posts/2025-01-12-sofa.md
+++ b/docs/blog/posts/2025-01-12-sofa.md
@@ -43,17 +43,17 @@ After the mattress, we decided to get a sofa.
 
     -   We found this very comfortable recliner sofa. The material was really good. However, it was pricey and a manual half-recline.
 
-7.  [TWIN-MOTOR 2S-SOFA UM01 DGY][twin-motor-sofa] (Nittori), $1299
+7.  TWIN-MOTOR 2S-SOFA UM01 DGY (Nittori, link removed), $1299
 
     -   This was the first sofa we saw at Nitori (earlier, we thought they did not have any). Nicholas felt it was not very comfortable on initial seating, despite having 2 adjustable parts: headrest and tilt.
 
-8.  [2 SEAT RECLINER SOFA N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] (Nittori), $1199
+8.  2 SEAT RECLINER SOFA N-BELIEVA BE2-MI15 LEATHER (Nittori, link removed), $1199
 
     -   This was the second sofa we saw at Nitori. It was an electric recliner sofa. It was very comfortable on initial seating, and also on full tilt.
 
 ![](../../static/blog/2025-01-12/nitori_nbelieva.jpg)
 
-We purchased the Nitori 2-seater [N-BELIEVA BE2-MI15 LEATHER][nitori-recliner] sofa on 11 January 2025.
+We purchased the Nitori 2-seater N-BELIEVA BE2-MI15 LEATHER sofa on 11 January 2025.
 
 Considerations:
 
@@ -75,5 +75,3 @@ Considerations:
 [univonna-javier]: https://www.lazada.sg/products/univona-javier-2-seater-recliner-sofa-synthetic-leather-free-delivery-free-assembly-i6366730-s21045137676.html?
 [solotti-martina]: https://www.courts.com.sg/solotti-martina-2rr-m-seater-hl-black-half-leather-sofa-ip184630
 [dresden-sofa]: https://www.courts.com.sg/dresden-2rr-seater-fl-dk-mocha-full-leather-recliner-sofa-ip180785
-[twin-motor-sofa]: https://www.nitori.com.sg/products/twin-motor-2s-sofa-um01-dgy
-[nitori-recliner]: https://www.nitori.com.sg/products/2-seat-recliner-sofa-n-believa-be2-mi15-leather
