fix(docs): correct formatting and link for cookware options and update margin section in trading journal

--- a/docs/blog/posts/2022-08-22-vietnam.md
+++ b/docs/blog/posts/2022-08-22-vietnam.md
@@ -21,7 +21,7 @@ Ninh Bin, motorbiking, caving and a cruise from 13-19 Nov 2022.
 -   We had delicious banh mi and pho and tough dough fritters at Nicholas' impulse.
 -   1355 [Flight][hanoi-to-dong-hoi] to Dong Hoi (T1, 1hr 5min)
 -   1500 Arrive in Dong Hoi
--   Arranged for pick up transport to our homestay. Alternatively, we could [take local bus to Phong Nha (hourly, 90min)][dong-hoi-to-phong-nha-bus]
+-   Arranged for pick up transport to our homestay. Alternatively, we could take local bus to Phong Nha (hourly, 90min)
 -   Overnight at [Son River Homestay][son-river-homestay]
 
 **14 Nov, Mon**
@@ -164,7 +164,6 @@ Approximate total cost per person: SGD 1847.15/2 = SGD 923.58
 [hanoi-amorita]: https://www.booking.com/hotel/vn/hanoi-royal-view.html?
 [halong-bay-ticket]: ../../static/blog/2022-08-22/halong-bay.pdf
 [halong-bay-tour]: https://www.klook.com/en-SG/activity/27812-ha-long-bay-day-tour-hanoi/?spm=Experience_SubVertical.Activity_LIST&clickId=fa825a4048
-[dong-hoi-to-phong-nha-bus]: https://www.visitphongnha.com/plan-your-visit/getting-here/dong-hoi/
 [central-backpackers-hostel]: https://goo.gl/maps/quDAvQ9Z5youMJai7
 [ninhbin-to-hanoi]: https://www.geckoroutes.com/vietnam/ninh-binh-to-hanoi/
 [phong-nha-things-todo]: https://vietnam.travel/things-to-do/complete-guide-phong-nha
