--- a/docs/blog/posts/2024-10-22-cookware.md
+++ b/docs/blog/posts/2024-10-22-cookware.md
@@ -25,7 +25,7 @@ Options (ranked by Chanel):
 1.  $79 [SCANPAN Impact 24cm/7.2L Stock pot]
 2.  $78 - [ZWILLING Trueflow Stock Pot - 24cm/6L, Glass Lid With Strainer]
 3.  $79 [Cuisinart Chef's Classic Stockpot with Cover Brushed Stainless]
-4.  $89 - [WMF Provence Stock Pot, 24cm] / 8.8L
+4.  $89 - WMF Provence Stock Pot, 24cm / 8.8L
 5.  $72 - [SAFICO Stainless Steel High Casserole (24 X H16 CM) / 6.8L]
 
 ### Frying Pan (16cm to 28cm, oven-safe)
@@ -80,7 +80,6 @@ Options:
 [SCANPAN Impact 24cm/7.2L Stock pot]: https://shopee.sg/SCANPAN-Impact-24cm-7.2L-Stock-pot-i.78557623.1332930627?sp_atk=acf555a9-0816-481e-a088-b6782c986962&xptdk=acf555a9-0816-481e-a088-b6782c986962
 [ZWILLING Trueflow Stock Pot - 24cm/6L, Glass Lid With Strainer]: https://bhgsingapore.com.sg/products/sale/all/zwilling-trueflow-stock-pot-24cm-glass-lid-with-strainer
 [Cuisinart Chef's Classic Stockpot with Cover Brushed Stainless]: https://www.amazon.sg/Cuisinart-Chefs-Classic-8-Quart-Stockpot/dp/B007HN67KU/ref=pd_sbs_d_sccl_2_2/355-4565176-6848500?pd_rd_w=7ZueC&content-id=amzn1.sym.7129a2ab-7686-493d-a6b5-1260dd6cbab5&pf_rd_p=7129a2ab-7686-493d-a6b5-1260dd6cbab5&pf_rd_r=XXSPGTVBG8RRPD2T59SP&pd_rd_wg=OxVpi&pd_rd_r=6c85209c-9b99-41e0-b5f1-7b7f7705782f&pd_rd_i=B00008CM6J&th=1
-[WMF Provence Stock Pot, 24cm]: https://www.metro.com.sg/product/provence-plus-stockpot-24cm-07-2324-6380?ean=002d9343-a699-4ea1-9cea-cc4d17d230f0
 [SAFICO Stainless Steel High Casserole (24 X H16 CM) / 6.8L]: https://www.lazada.sg/products/safico-stainless-steel-high-casserole-24-x-h16-cm-by-tott-i304146726-s538348283.html?spm=a2o42.lazmart_categories.list.15.3b1a70328gwbwe&priceCompare=skuId%3A538348283%3Bsource%3Alazada-search-voucher-other%3Bsn%3A4170f03436281d9e00f917aa53068bde%3BunionTrace%3Aa3b5c7a417293333863973419e%3BoriginPrice%3A7200%3BvoucherPrice%3A7200%3BdisplayPrice%3A7200%3BsinglePromotionId%3A-1%3BsingleToolCode%3A-1%3BvoucherPricePlugin%3A1%3BbuyerId%3A0%3Btimestamp%3A1729333386615&fs_ab=2&c=&ratingscore=5.0&freeshipping=0&channelLpJumpArgs=&fuse_fs=&search=1&sale=12&price=72&review=1&location=Singapore&stock=1&lang=en&request_id=4170f03436281d9e00f917aa53068bde
 [HEMKOMST]: https://www.ikea.com/sg/en/p/hemkomst-frying-pan-stainless-steel-non-stick-coating-60580100/#content
 [VARDAGEN]: https://www.ikea.com/sg/en/p/vardagen-frying-pan-cast-iron-50554516/
